# sudoku_web

./: .gitignore  README.md  build.sbt  build.sc  main.py  pyproject.toml
app/: main.py
app/controllers/: HomeController.scala
app/db/: base_class.py  session.py
app/models/: User.scala  UserRepository.scala  UserTable.scala  puzzle.py  state.py  user.py
app/routers/: get_db.py  puzzle_routers.py  state_routers.py
app/schemas/: errors.py  puzzle_state.py  user.py
app/views/: index.scala.html  main.scala.html
conf/: application.conf  routes
public/: backend_spec.yaml  identifier.sqlite
public/javascripts/: main.js
public/schemas/: Error.yaml  PuzzleState.yaml  Users.yaml
test/controllers/: HomeControllerSpec.scala
