# ==============================================================================
# Sudoku Web App - pyproject.toml
# ==============================================================================

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# --- Project Metadata ---
[project]
name = "sudoku-web"
version = "0.1.0"
description = "sudoku web app with a python backend"
authors = [{ name = "Bryan Cora", email = "bcora2018@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
  "aiosqlite>=0.21.0",
  "fastapi>=0.118.0",
  "uvicorn[standard]>=0.37.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/brinhasavlin/sudoku-web"
repository = "https://github.com/brinhasavlin/sudoku-web"

# --- Development and Tooling Dependencies ---
[project.optional-dependencies]
lint = ["ruff", "pyright"]
test = ["pytest", "pytest-asyncio", "httpx", "coverage"]
doc = ["sphinx"]
build = ["build[virtualenv]==1.0.3"]
dev = [
  "tox",
  "pre-commit",
  "interrogate",
  "sudoku-web[lint]",
  "sudoku-web[test]",
  "sudoku-web[doc]",
  "sudoku-web[build]",
]

# --- Tool Configurations ---

[tool.pyright]
include = ["src/sudoku_web"]
exclude = [".venv"]
venvPath = "."
venv = ".venv"

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[tool.interrogate]
fail-under = 80
ignore-module = true

# --- Ruff Configuration ---
[tool.ruff]
line-length = 120
src = ["src"]
extend-exclude = ["conf.py"]
target-version = "py312"

# Linting rules
select = ["ALL"]
ignore = [
  "COM812", # Conflicts with the formatter
  "ISC001", # Conflicts with the formatter
  "PT001",  # Pytest rules that are a matter of style preference
  "PT023",
]

# Per-file ignores
[tool.ruff.per-file-ignores]
"tests/**" = ["S101", "D103"]
"**/__init__.py" = ["F401", "F403"]
"docs/**" = ["INP001"]

# Formatting
[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Linting plugins
[tool.ruff.pyupgrade]
keep-runtime-typing = true

[tool.ruff.pydocstyle]
convention = "google"
